# fw-max-ackerman

ackerman_description/: CMakeLists.txt  package.xml
ackerman_description/config/: fw_max_controllers.yaml
ackerman_description/launch/: spawn_ackerman.launch.py
ackerman_description/meshes/: fw-max-chassis.STL  fw-max-luntai.STL
ackerman_description/src/: ackermann_republisher.py  movent.py
ackerman_description/urdf/: fw-max.gazebo.xacro  fw-max.xacro  fw_max.urdf  macros.xacro
ackerman_description/world/: no_roof_small_warehouse.world
citysim_ros2_pkg/: CMakeLists.txt  package.xml
citysim_ros2_pkg/launch/: city_launch.py
citysim_ros2_pkg/models/actor/meshes/: ANIMATION_running.usd  ANIMATION_talking_b.usd  SKIN_man_blue_shirt.usd  SKIN_man_green_shirt.usd  SKIN_man_red_shirt.usd
citysim_ros2_pkg/models/ocean/: mesh-simple.usd  mesh.usd  mesh_below.usd
citysim_ros2_pkg/worlds/: simple_city.world
fw_max_cartographer/: CMakeLists.txt  package.xml
fw_max_cartographer/install/: local_setup.sh  setup.sh
fw_max_cartographer/install/fw_max_cartographer/share/fw_max_cartographer/: package.bash  package.zsh
fw_max_cartographer/launch/: rtabmap_3d.launch.py  start_cartographer.launch.py
fw_max_cartographer/log/: latest_build
