<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>citysim_ros2_pkg</name>
  <version>0.0.0</version>
  <description>ROS 2 package containing the citysim Gazebo world and assets.</description>
  <maintainer email="syedazif321@gmail.com">azif</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>ament_cmake_python</build_depend>
  
  <depend>rclcpp</depend>
  <depend>gazebo_ros</depend>
  <depend>launch_ros</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>